Remove an unnecessary JVM argument used for Lincheck tests